# Bondlw-property-search-tool

./: .gitignore  .replit  CHANGELOG-PENDING.md  CHANGELOG.md  CLAUDE.md  DOC-UPDATE-NEEDED.md  README.md  check_gates.py  check_props.py  check_score.py  check_sstc.py  pyproject.toml  requirements.txt  verify_offer.py
.claude/: settings.local.json
config/: search_config.yaml  user_agent_pool.txt
docs/: ARCHITECTURE.md  USER_GUIDE.md  WORKFLOW.md
output/: debug_search_page.html
scripts/: add_favs.py  analyse_best_favs.py  analyse_favs.py  analyse_shortlist.py  audit.py  audit_criteria.py  audit_favourites.py  audit_report.py  audit_sections.py  best_options.py  check_bramley.py  check_cards.py  check_db.py  check_fav_visibility.py  check_favourites_qualification.py  check_favs.py  check_hero.py  check_queripel_gates.py  check_report_favs.py  check_similar.py  check_springview.py  check_springview_gates.py  check_tolerance.py  debug_excluded.py  debug_visibility.py  diagnostic.py  find_queripel.py  fix_tenure.py  full_analysis.py  gate_analysis.py  import_rightmove_favourites.py  offer_analysis.py  price_analysis.py  query_best_options.py  query_freehold.py  query_freehold_area.py  query_pass_list.py  query_sizes.py  query_snodland.py  raise_analysis.py  (+7 more)
src/: __main__.py  cli.py  config_loader.py
templates/: _scripts.html  _styles.html  daily_report.html
tests/: conftest.py  test_cli.py  test_config_loader.py  test_enrichment.py  test_financial_calculator.py  test_geo.py  test_hard_gates.py  test_notifier.py  test_report_generator.py  test_repository.py  (+3 more)
(+17 files in other folders)
